// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with one expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totalling 
    $2.35
      
  </h1>
</div>
`;

exports[`should render ExpensesSummary with one expense 2`] = `
<div>
  <h1>
     Viewing 
    23
     
    expenses
     totalling 
    $23,548,481,398.47
      
  </h1>
</div>
`;
